<resources>
    <string name="app_name">PatmImplicitIntentions</string>
    <string name="btn1">Call</string>
    <string name="btn2">Email</string>
    <string name="btn3">Web page</string>
    <string name="btn4">Camera</string>
    <string name="btn5">Sms</string>
    <string name="btn6">Google maps</string>
    <string name="btn7">Dial Number</string>
    <string name="btn8">Contacts</string>
    <string name="btn9">Music</string>
    <string name="btn10">Settings</string>
</resources>
