<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.darkovr.patmimplicitintentions.MainActivity">


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Seen implicit intentions!"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:gravity="center"/>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/btCalls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn1" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/btEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn2" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/btWebPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn3" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/btSMS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn5" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/btCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn4" />

            <ImageView
                android:id="@+id/ivimagen"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="My own implicit intentions!"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:gravity="center"/>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/btDialNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn7" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/btSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn10" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/btContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn8" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/btMusic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn9" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/btMaps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn6"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
